byte-code-compiler/test_files/typing/bad/testfile-arith-2.psc

class S { int_32 a; };
int_32 main() { struct S *p; 1-p; }
